[package]
name = "flight-wit-processor"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Flight WIT Interface Processor - Core library for WIT parsing and validation"
authors = ["Flight Team"]

[lib]
name = "flight_wit_processor"
path = "src/lib.rs"

[[bin]]
name = "flight-wit"
path = "src/bin/flight-wit.rs"

[dependencies]
# WIT Processing Core
wit-parser = "0.235"
wasmparser = "0.217"

# Workspace Dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI and Async
clap = { version = "4.5", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# File System and Path Handling
walkdir = "2.4"
glob = "0.3"

# Performance and Memory
rayon = { version = "1.8", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[features]
default = ["cli"]
cli = ["clap", "tokio"]
parallel = ["rayon"]
